samples/_failures_safe/1761469485_4e6fc5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e551be1.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_8e551be1.c:166:22: error: expected ‘;’ at end of input
  166 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_8e551be1.c:166:5: error: expected declaration or statement at end of input
  166 |     for (int i = 0; i
      |     ^~~
